--- a/inst/rmd/P2.Rmd
+++ b/inst/rmd/P2.Rmd
@@ -39,8 +39,11 @@ params:
 
 ```{r setup, include=FALSE}
 library(RODBC)
-library(knitr)
-library(tidyverse)
+#library(knitr)
+#library(tidyverse)
+library(dplyr)
+library(tidyr)
+
 knitr::opts_chunk$set(echo = TRUE,
                 message = FALSE,
                 warning = FALSE,
