--- a/inst/rmd/P2.Rmd
+++ b/inst/rmd/P2.Rmd
@@ -43,6 +43,7 @@ library(RODBC)
 #library(tidyverse)
 library(dplyr)
 library(tidyr)
+library(ggplot2)
 
 knitr::opts_chunk$set(echo = TRUE,
                 message = FALSE,
